feat: add create comment handler
